--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "4.3.0",
         "@ionic/storage": "2.0.1",
+        "cordova-browser": "^4.1.0",
+        "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-googlemaps": "^2.0.11",
+        "cordova-plugin-ionic-webview": "^1.1.15",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-whitelist": "^1.3.1",
         "ionic-angular": "3.7.1",
+        "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
@@ -43,7 +49,15 @@
             "cordova-plugin-googlemaps": {
                 "API_KEY_FOR_ANDROID": "AIzaSyD4v_SxfnKv_JF2vfZYKqlHV04UTCoOXJs",
                 "API_KEY_FOR_IOS": "AIzaSyD4v_SxfnKv_JF2vfZYKqlHV04UTCoOXJs"
-            }
-        }
+            },
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "browser"
+        ]
     }
 }
